[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "RAG-based chatbot for Samsara customer stories"
requires-python = ">=3.11"
dependencies = [
    "openai>=2.0.1",
    "streamlit>=1.50.0",
    "plotly>=5.18.0",
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "lxml>=5.0.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-community>=0.0.20",
    "chromadb>=0.4.22",
    "logfire>=0.20.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "sentence-transformers>=2.2.2",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
torchvision = [{ index = "pytorch-cpu" }]
